[project]
name = "clipboard"
version = "0.1.0"
requires-python = ">=3.11,<3.12"

dependencies = [
    # Web/API
    "flask>=3.1.3",
    "flask-cors>=6.0",
    "requests>=2.34.2",
    "python-dotenv>=1.1.1",

    # Core numerical
    "numpy>=1.26",
    "scikit-learn>=1.5,<2.0",
    "pydantic>=2.11",

    # Audio
    "audioread>=3.1.0",
    "faster-whisper>=1.2.1",
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
    "speechbrain>=1.1.0",
    "pyannote-audio>=3.4.0",

    # Video / Images
    "opencv-python-headless>=4.13.0.92",
    "scenedetect>=0.7",
    "pillow>=12.2.0",
    "mediapipe>=0.10.35",

    # AI / Vision
    "open-clip-torch>=3.3.0",
    "sentence-transformers>=5.5.0",
    "transformers>=5.8.1",

    # PyTorch
    "torch",
    "torchaudio",
    "torchvision",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"

[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
